implement get_shouldFetchSpecificRecord_withFilter test, revealed issue